:pencil2: Fix: Image Cropper 수정

--- a/frontend/src/style/ImageCropper.css
+++ b/frontend/src/style/ImageCropper.css
@@ -48,3 +48,8 @@
   justify-content: space-between;
   margin-top: 20px;
 }
+
+::-webkit-slider-thumb { 
+  filter: drop-shadow(0px 0px 0px rgba(0,0,0,0));
+  box-shadow: 0px 0px 0px 1px var(--gray) inset;
+}
